# cpgequizlet-server

./: .env  Cargo.toml  error.json  error.txt  errors.txt  errors2.txt  quizzes.json  quizzes2.json
.cargo/: config.toml
data/: SI-action-meca.json  chimie17.json  chimie18.json  chimie19.json  maths01.json  maths02.json  maths03.json  maths04.json  maths05.json  maths06.json  maths07.json  maths09.json  maths10.json  maths11.json  maths12.json  maths13.json  maths15.json  maths16.json  maths17.json  physique1.json  physique10.json  physique11.json  physique12.json  physique13.json  physique14.json  physique15.json  physique16.json  physique2.json  physique20.json  physique21.json  physique22.json  physique23.json  physique24.json  physique25.json  physique26.json  physique27.json  physique28.json  physique29.json  physique3.json  physique31.json  (+8 more)
data2_improved/: SI-action-meca.json  SI-asservissement.json  SI-cinematique.json  SI-cinetique-dynamique.json  SI-dynamique-energie.json  SI-theorie-mecanisme.json  chimie17.json  chimie18.json  chimie19.json  maths-theoremes.json  maths01.json  maths02.json  maths03.json  maths04.json  maths05.json  maths06.json  maths07.json  maths09.json  maths10.json  maths11.json  maths12.json  maths13.json  maths15.json  maths16.json  maths17.json  physique1.json  physique10.json  physique11.json  physique12.json  physique13.json  physique14.json  physique15.json  physique16.json  physique2.json  physique20.json  physique21.json  physique22.json  physique23.json  physique24.json  physique25.json  (+13 more)
src/: constants.rs  main.rs  models.rs  (+2 more)
(+21 files in other folders)
