[package]
name = "quizletServer"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["chrono", "mysql", "r2d2"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
actix-multipart = "0.7.2"
chrono = { version = "0.4.44", features = ["serde"] }
actix-cors = "0.7.1"
uuid = { version = "1.21.0", features = ["v7"] }
rand = { version = "0.10.0", features = ["thread_rng"] }
serde_json = "1.0.149"
reqwest = "0.13.2"
